src/validation/tests/snapshots/rusty__validation__tests__literals_validation_tests__literal_cast_with_non_literal.snap
---
source: src/validation/tests/literals_validation_tests.rs
expression: "&diagnostics"
---
error[E061]: Cannot cast into [x], only elementary types are allowed
  ┌─ <internal>:2:13
  │
2 │             INT#[x];
  │             ^^^^^^^ Cannot cast into [x], only elementary types are allowed
